kube/kube-scheduler-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-scheduler
  labels:
    name: kubernetes-scheduler
  namespace: kube-system
spec:
  ports:
  - port: 10251
    targetPort: 10251
  selector:
    name: kubernetes-scheduler
